crates/hid-cammus-protocol/tests/snapshots/snapshot_tests__snapshot_encode_torque_full_negative.snap
---
source: crates/hid-cammus-protocol/tests/snapshot_tests.rs
expression: report
---
[
    1,
    1,
    128,
    1,
    0,
    0,
    0,
    0,
]
