crates/hid-cammus-protocol/tests/snapshots/snapshot_tests__snapshot_encode_torque_quarter.snap
---
source: crates/hid-cammus-protocol/tests/snapshot_tests.rs
expression: report
---
[
    1,
    255,
    31,
    1,
    0,
    0,
    0,
    0,
]
