crates/hid-cammus-protocol/tests/snapshots/snapshot_tests__snapshot_is_cammus.snap
---
source: crates/hid-cammus-protocol/tests/snapshot_tests.rs
expression: "format!(\"{:?}\", results)"
---
"[(\"c5_correct\", true), (\"c12_correct\", true), (\"wrong_vid\", false), (\"wrong_pid\", false)]"
