crates/hid-cammus-protocol/tests/snapshots/snapshot_tests__snapshot_model_c5.snap
---
source: crates/hid-cammus-protocol/tests/snapshot_tests.rs
expression: "format!(\"name={}, max_torque={:.1}\", model.name(), model.max_torque_nm())"
---
"name=Cammus C5, max_torque=5.0"
