crates/hid-cammus-protocol/tests/snapshots/snapshot_tests__snapshot_model_cp5_pedals.snap
---
source: crates/hid-cammus-protocol/tests/snapshot_tests.rs
expression: "format!(\"name={}, max_torque={:.1}\", model.name(), model.max_torque_nm())"
---
"name=Cammus CP5 Pedals, max_torque=0.0"
