crates/hid-cammus-protocol/tests/snapshots/snapshot_tests__snapshot_parse_buttons.snap
---
source: crates/hid-cammus-protocol/tests/snapshot_tests.rs
expression: "format!(\"buttons={:#06X}\", report.buttons)"
---
"buttons=0xCDAB"
