crates/hid-cammus-protocol/tests/snapshots/snapshot_tests__snapshot_parse_center.snap
---
source: crates/hid-cammus-protocol/tests/snapshot_tests.rs
expression: "format!(\"steering={:.4}, throttle={:.4}, brake={:.4}, clutch={:.4}, handbrake={:.4}, buttons={}\",\nreport.steering, report.throttle, report.brake, report.clutch,\nreport.handbrake, report.buttons)"
---
"steering=0.0000, throttle=0.0000, brake=0.0000, clutch=0.0000, handbrake=0.0000, buttons=0"
