crates/hid-cammus-protocol/tests/snapshots/snapshot_tests__snapshot_parse_error_too_short.snap
---
source: crates/hid-cammus-protocol/tests/snapshot_tests.rs
assertion_line: 146
expression: "format!(\"{err}\")"
---
"report too short: got 3 bytes, need 12"
